# Lux

./: CMakeLists.txt  README.md
examples/: hello_world.lux  syntax_error.lux
source/: CMakeLists.txt  chunk.cpp  chunk.hpp  common.hpp  compiler.cpp  compiler.hpp  debug.cpp  debug.hpp  main.cpp  object.cpp  object.hpp  scanner.cpp  scanner.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp
source/types/: hash_table.cpp  hash_table.hpp  object.cpp  object.hpp  string.cpp  string.hpp  value.cpp
tests/: CMakeLists.txt  error_output_tests.cpp
